--- a/pages/blog/robot-brain-scala/index.mdx
+++ b/pages/blog/robot-brain-scala/index.mdx
@@ -2,12 +2,13 @@ import ArticlePage from "@templates/article.template";
 import metaImage from "./muneeb-syed-x9NfeD3FpsE-unsplash.jpg";
 
 export const meta = {
-  date: new Date("2017-02-04"),
   title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
   blurb: "Exploring computer vision with a from-scratch neural net in Scala",
-  tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"],
+  date: new Date("2017-02-04"),
   image: metaImage,
+  next: ["electric-pentameter", "build-you-a-tweetbot"],
   slug: "robot-brain-scala",
+  tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"],
 };
 
 ## Or, a Python Dev Hacks Together a Neural Network From Scratch in (Bad) Scala
