fix up some images

--- a/pages/blog/data-mashups/index.mdx
+++ b/pages/blog/data-mashups/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: "Data Mashups: Remix Your Way To Interactive Visualizations",
   blurb: "",
   date: new Date("2017-05-05"),
-  image: metaImage,
+  image: { alt: "green rubber plant in closeup photography", src: metaImage },
   slug: "data-mashups",
   tags: [
     "python",
