--- a/pages/blog/electric-pentameter/index.mdx
+++ b/pages/blog/electric-pentameter/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: "Do Robots Dream of Electric Pentameter?",
   blurb: "Generative poetry with LSTM neural networks",
   date: new Date("2017-02-10"),
-  image: metaImage,
+  image: { alt: "green ovate leaves with dew drops", src: metaImage },
   next: ["robot-brain-scala", "build-you-a-tweetbot"],
   slug: "electric-pentameter",
   tags: ["python", "ml", "LSTM", "neural networks", "keras"],
