--- a/pages/blog/linux-on-windows/index.mdx
+++ b/pages/blog/linux-on-windows/index.mdx
@@ -9,7 +9,7 @@ export const meta = {
   title: "Linux on Windows!?",
   blurb: "Windows 10 finally finds its killer app: Linux",
   date: new Date("2017-07-03"),
-  image: metaImage,
+  image: { alt: "closeup photo of green monstera plants", src: metaImage },
   next: ["robot-brain-scala"],
   slug: "linux-on-windows",
   tags: ["linux", "windows", "bash", "WSL", "X"],
