--- a/pages/blog/build-you-a-tweetbot/index.mdx
+++ b/pages/blog/build-you-a-tweetbot/index.mdx
@@ -8,7 +8,10 @@ export const meta = {
   title: "Build You a Python TweetBot: Tweepy & Markovify",
   blurb: "Using Markov chains to construct a literature-penning Twitter bot",
   date: new Date("2017-01-25"),
-  image: metaImage,
+  image: {
+    alt: "shallow photography of green monstera leaves",
+    src: metaImage,
+  },
   next: ["electric-pentameter", "robot-brain-scala"],
   tags: ["python", "twitter", "Markov chains", "bots"],
   slug: "build-you-a-tweetbot",
