--- a/pages/blog/guava-collections/index.mdx
+++ b/pages/blog/guava-collections/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: "Beautify Your Java Collections with Google Guava",
   blurb: "",
   date: new Date("2017-02-02"),
-  image: metaImage,
+  image: { alt: "green and white leaf plant", src: metaImage },
   next: ["linux-on-windows"],
   slug: "guava-collections",
   tags: ["java", "guava"],
