--- a/pages/blog/robot-brain-scala/index.mdx
+++ b/pages/blog/robot-brain-scala/index.mdx
@@ -5,7 +5,7 @@ export const meta = {
   title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
   blurb: "Exploring computer vision with a from-scratch neural net in Scala",
   date: new Date("2017-02-04"),
-  image: metaImage,
+  image: { alt: "green leafed plants", src: metaImage },
   next: ["electric-pentameter", "build-you-a-tweetbot"],
   slug: "robot-brain-scala",
   tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"],
