add most recent post

--- a/pages/blog/guava-collections/index.mdx
+++ b/pages/blog/guava-collections/index.mdx
@@ -8,7 +8,7 @@ export const meta = {
   image: { alt: "green and white leaf plant", src: metaImage },
   next: ["linux-on-windows"],
   slug: "guava-collections",
-  tags: ["java", "guava"],
+  tags: ["Java", "Guava"],
 };
 
 I realize I'm years late to the [Google Guava](https://github.com/google/guava) train, but Guava is so delightfully useful that I can't help but belatedly gush about it. In particular, the new Collections are just amazing for getting rid of boilerplate and making your code simpler and prettier. Let me show off two of my favorites, the Multiset and the Multimap:
