chore: tidy up Templates and Sections

--- a/pages/about/index.mdx
+++ b/pages/about/index.mdx
@@ -1,5 +1,5 @@
 import { author } from "@data";
-import AuthorTemplate from "@templates/author.template";
+import AuthorTemplate from "@templates/About";
 
 ## Howdy!🤠
 
