--- a/pages/blog/electric-pentameter/index.mdx
+++ b/pages/blog/electric-pentameter/index.mdx
@@ -1,4 +1,4 @@
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 
 export const meta = {
   title: "Do Robots Dream of Electric Pentameter?",
