--- a/pages/blog/build-you-a-tweetbot/index.mdx
+++ b/pages/blog/build-you-a-tweetbot/index.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image";
 
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 import tweepyExample from "./tweepy-example.png";
 
 export const meta = {
