--- a/pages/blog/data-mashups/index.mdx
+++ b/pages/blog/data-mashups/index.mdx
@@ -1,4 +1,4 @@
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 
 export const meta = {
   title: "Data Mashups: Remix Your Way To Interactive Visualizations",
