--- a/pages/blog/guava-collections/index.mdx
+++ b/pages/blog/guava-collections/index.mdx
@@ -1,4 +1,4 @@
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 
 export const meta = {
   title: "Beautify Your Java Collections with Google Guava",
