--- a/pages/blog/haskell-snacks-yesod-morpheus-graphql/index.mdx
+++ b/pages/blog/haskell-snacks-yesod-morpheus-graphql/index.mdx
@@ -1,4 +1,4 @@
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 
 export const meta = {
   title: "Haskell Snacks: Integrating Yesod and Morpheus GraphQL",
