--- a/pages/blog/linux-on-windows/index.mdx
+++ b/pages/blog/linux-on-windows/index.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image";
 
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 import wslColorProbs from "./wsl-color-probs.png";
 import wslTmux from "./wsl-tmux.png";
 
