--- a/pages/blog/robot-brain-scala/index.mdx
+++ b/pages/blog/robot-brain-scala/index.mdx
@@ -1,4 +1,4 @@
-import ArticlePage from "@templates/article.template";
+import ArticlePage from "@templates/Article/";
 
 export const meta = {
   title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
