chore: blog editing and trimming

--- a/pages/blog/electric-pentameter/index.mdx
+++ b/pages/blog/electric-pentameter/index.mdx
@@ -249,9 +249,9 @@ If we wish to continue tinkering with this model to improve its results, we coul
 
 However, what I think is even cooler is that these LSTM methods are applicable to almost any kind of time-series data! So you're not stuck with text processing— using the same techniques you just learned, you could work with audio files, economic data, weather, brain waves, with the motion of a physical system— if it's time-series, an LSTM network can probably do something interesting with it. Your only limit is your own curiosity... and the quality of your GPU.
 
-Personally, I chose to use Flask to build my network into a little web app, so that others might find amusement from it. The result: a [sonnet-spewing interactive robo-Shakespeare](http://robot-shakespeare.herokuapp.com/). The code for this is [up on my GitHub](https://github.com/vivshaw/shakespeare-LSTM/), as always.
+Personally, I chose to use Flask to build my network into a little web app, so that others might find amusement from it. The result: a [sonnet-spewing interactive robo-Shakespeare](https://github.com/vivshaw/shakespeare-LSTM/).
 
-Hopefully, this has been a helpful intro to what LSTM networks can do and how we can implement them in Keras. If your curiosity is piqued, I implore you to peruse the Keras [documentation](https://keras.io/) and try building some networks. With Keras, it's endlessly rewarding, and much simpler than it sounds. Happy coding!
+Hopefully, this has been a helpful intro to what LSTM networks can do and how we can implement them in Keras. If your curiosity is piqued, peruse the Keras [documentation](https://keras.io/) and try building some networks. With Keras, it's endlessly rewarding, and much simpler than it sounds. Happy coding!
 
 export default ({ children }) => (
   <ArticlePage meta={meta}>{children}</ArticlePage>
