--- a/pages/blog/haskell-snacks-yesod-morpheus-graphql/index.mdx
+++ b/pages/blog/haskell-snacks-yesod-morpheus-graphql/index.mdx
@@ -9,9 +9,7 @@ export const meta = {
   tags: ["Haskell", "Yesod", "Morpheus", "GraphQL"],
 };
 
-Here's a new little series of posts where I'll document some bite-sized things I learned while picking up Haskell, focusing on things that weren't immediately intuitive and didn't have easily Googleable answers.
-
-First up: integrating [Yesod](https://www.yesodweb.com/) with [Morpheus GraphQL](https://morpheusgraphql.com/)! Morpheus provides examples for `scotty` and `servant` integration, but Scotty wasn't full-featured enough for my needs, and I'm not familair with servant. Yesod to the rescue! But, you'll find that the syntax shown in the scotty and servant examples for declaring your GraphQL API, will not cooperate with Yesod. Here's how it is in the simplest Scotty example from the Morpheus docs:
+I found myself with a need to integrate [Yesod](https://www.yesodweb.com/) with [Morpheus GraphQL](https://morpheusgraphql.com/), something that wasn't immediately intuitive and didn't have an easily Googleable answer. This is how I got it to cooperate. Morpheus provides examples for Scotty and Servant integration, but Scotty wasn't full-featured enough for my needs, and I'm not familair with Servant. Yesod to the rescue! But, you'll find that the syntax shown in the Scotty and Servant examples for declaring your GraphQL API, will not cooperate with Yesod. Here's how it is in the simplest Scotty example from the Morpheus docs:
 
 ```haskell
 -- Definition of GraphQL API
@@ -23,7 +21,7 @@ main :: IO ()
 main = scotty 3000 $ post "/api" $ raw =<< (liftIO . gqlApi =<< body)
 ```
 
-You might think you can just snag the `liftIO . gqlApi =<< body`, stick it in a Yesod handler unchanged, and pass in the POST request body. Sadly, you'd be wrong- Yesod expects different types.
+You might think you can snag the `liftIO . gqlApi =<< body`, stick it in a Yesod handler unchanged, and pass in the POST request body. Sadly, you'd be wrong— Yesod expects different types.
 
 Thanks to [a single GitHub issue](https://github.com/morpheusgraphql/morpheus-graphql/issues/396#issue-577612225) courtesy [tuxagon](https://github.com/tuxagon), I discovered the correct syntax, and it's really quite simple. All you have to do is change the type signature:
 
@@ -48,7 +46,7 @@ app :: App APIEvent IO
 app = deriveApp rootResolver
 ```
 
-We can still stitch this into a Yesod handler quite easily! The key is in [the definition of interpreter](https://github.com/morpheusgraphql/morpheus-graphql/blob/b5ef7a50dd5bd42dc51bbdf11509028c868ee579/src/Data/Morpheus.hs#L31):
+We can still stitch this into a Yesod handler! The key is in [the definition of interpreter](https://github.com/morpheusgraphql/morpheus-graphql/blob/b5ef7a50dd5bd42dc51bbdf11509028c868ee579/src/Data/Morpheus.hs#L31):
 
 ```haskell
 interpreter ::
@@ -59,7 +57,7 @@ interpreter ::
 interpreter = runApp . deriveApp
 ```
 
-Hey, `interpreter` is just using `deriveApp` under the hood, just like `app` does! So all we need to do in our Yesod handler, is apply `runApp` to `app`, and we'll have the same GraphQL API as we did before. All it takes is one little `where` clause:
+Hey, `interpreter` is just using `deriveApp` under the hood, just like `app` does! What we must do in our Yesod handler is apply `runApp` to `app`. Then we'll have the same GraphQL API as we did before. All it takes is one little `where` clause:
 
 ```haskell
 app :: App APIEvent IO
