feat: install Prettier and use it

--- a/pages/blog/build-you-a-tweetbot/index.mdx
+++ b/pages/blog/build-you-a-tweetbot/index.mdx
@@ -1,7 +1,7 @@
-import Image from "next/image";
+import Image from "next/image"
 
-import ArticlePage from "@templates/Article/";
-import tweepyExample from "./tweepy-example.png";
+import ArticlePage from "@templates/Article/"
+import tweepyExample from "./tweepy-example.png"
 
 export const meta = {
   title: "Build You a Python TweetBot: Tweepy & Markovify",
@@ -10,7 +10,7 @@ export const meta = {
   next: ["electric-pentameter", "robot-brain-scala"],
   tags: ["python", "twitter", "Markov chains", "bots"],
   slug: "build-you-a-tweetbot",
-};
+}
 
 Perhaps you've run across Twitter bots like [@thesefutures](http://motherboard.vice.com/read/twitter-bot-predicts-these-futures) or [@thinkpiecebot](https://twitter.com/thinkpiecebot) and wondered how to do that yourself. It's surprisingly simple and you should give it a try! For the less-technically-inclined, one can create a bot with minimal code using [a tool that will handle the heavy lifting for you](http://cheapbotsdonequick.com/). But if perchance you desire something more than that— you've come to the right place. Today we're going to get our hands dirty with Python and the Twitter API, and code our own Twitter bot from scratch. If this piques your curiosity, then I'd love to show you how simple it can really be, with a pinch of Python magic.
 
@@ -277,4 +277,4 @@ Happy botsmithing!
 
 export default ({ children }) => (
   <ArticlePage meta={meta}>{children}</ArticlePage>
-);
+)
