--- a/pages/blog/robot-brain-scala/index.mdx
+++ b/pages/blog/robot-brain-scala/index.mdx
@@ -1,4 +1,4 @@
-import ArticlePage from "@templates/Article/";
+import ArticlePage from "@templates/Article/"
 
 export const meta = {
   title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
@@ -7,7 +7,7 @@ export const meta = {
   next: ["electric-pentameter", "build-you-a-tweetbot"],
   slug: "robot-brain-scala",
   tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"],
-};
+}
 
 ## Or, a Python Dev Hacks Together a Neural Network From Scratch in (Bad) Scala
 
@@ -266,4 +266,4 @@ As always, if you want to see the code, [it's up on GitHub](https://github.com/v
 
 export default ({ children }) => (
   <ArticlePage meta={meta}>{children}</ArticlePage>
-);
+)
