--- a/pages/blog/linux-on-windows/index.mdx
+++ b/pages/blog/linux-on-windows/index.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image"
 
-import ArticlePage from "@templates/Article/"
+import { ArticleTemplate } from "@templates/Article"
 import wslColorProbs from "./wsl-color-probs.png"
 import wslTmux from "./wsl-tmux.png"
 
@@ -54,5 +54,5 @@ Here's my current setup:
 My assessment: heck yeah! I've been using this as my primary C/C++ dev environment for about two weeks now and it is lightyears beyond trying to hack everything together on Windows utilities & MinGW. It'll never be as smooth as a real Linux install, but it's more than good enough to do real work in. For as long as I'm stuck on Windows, I plan to keep exploring and expanding this.
 
 export default ({ children }) => (
-  <ArticlePage meta={meta}>{children}</ArticlePage>
+  <ArticleTemplate meta={meta}>{children}</ArticleTemplate>
 )
