chore: reorganize a buncha stuff into the app directory

--- a/app/blog/(posts)/build-you-a-tweetbot/page.mdx
+++ b/app/blog/(posts)/build-you-a-tweetbot/page.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image"
 
-import { ArticleTemplate } from "@templates/Article"
+import { ArticleTemplate } from "../_components/ArticleTemplate"
 import tweepyExample from "./tweepy-example.png"
 
 export const meta = {
