--- a/app/blog/(posts)/electric-pentameter/page.mdx
+++ b/app/blog/(posts)/electric-pentameter/page.mdx
@@ -1,4 +1,4 @@
-import { ArticleTemplate } from "@templates/Article"
+import { ArticleTemplate } from "../_components/ArticleTemplate"
 
 export const meta = {
   title: "Do Robots Dream of Electric Pentameter?",
