--- a/app/blog/(posts)/linux-on-windows/page.mdx
+++ b/app/blog/(posts)/linux-on-windows/page.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image"
 
-import { ArticleTemplate } from "@templates/Article"
+import { ArticleTemplate } from "../_components/ArticleTemplate"
 import wslColorProbs from "./wsl-color-probs.png"
 import wslTmux from "./wsl-tmux.png"
 
