--- a/app/blog/(posts)/data-mashups/page.mdx
+++ b/app/blog/(posts)/data-mashups/page.mdx
@@ -1,4 +1,4 @@
-import { ArticleTemplate } from "@templates/Article"
+import { ArticleTemplate } from "../_components/ArticleTemplate"
 
 export const meta = {
   title: "Data Mashups: Remix Your Way To Interactive Visualizations",
