--- a/app/blog/(posts)/haskell-snacks-yesod-morpheus-graphql/page.mdx
+++ b/app/blog/(posts)/haskell-snacks-yesod-morpheus-graphql/page.mdx
@@ -1,4 +1,4 @@
-import { ArticleTemplate } from "@templates/Article"
+import { ArticleTemplate } from "../_components/ArticleTemplate"
 
 export const meta = {
   title: "Haskell Snacks: Integrating Yesod and Morpheus GraphQL",
