--- a/app/blog/(posts)/robot-brain-scala/page.mdx
+++ b/app/blog/(posts)/robot-brain-scala/page.mdx
@@ -1,4 +1,4 @@
-import { ArticleTemplate } from "@templates/Article"
+import { ArticleTemplate } from "../_components/ArticleTemplate"
 
 export const meta = {
   title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
