--- a/app/blog/(posts)/robot-brain-scala/page.mdx
+++ b/app/blog/(posts)/robot-brain-scala/page.mdx
@@ -1,4 +1,4 @@
-import { ArticleTemplate } from "../_components/ArticleTemplate"
+import { PostTemplate } from "../_components/PostTemplate"
 
 export const meta = {
   title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
@@ -265,5 +265,5 @@ If we want to make further improvements, we could spend a while tweaking our met
 As always, if you want to see the code, [it's up on GitHub](https://github.com/vivshaw/scriptophile) for your viewing pleasure. Happy brain-building!
 
 export default ({ children }) => (
-  <ArticleTemplate meta={meta}>{children}</ArticleTemplate>
+  <PostTemplate meta={meta}>{children}</PostTemplate>
 )
