--- a/app/blog/(posts)/linux-on-windows/page.mdx
+++ b/app/blog/(posts)/linux-on-windows/page.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image"
 
-import { ArticleTemplate } from "../_components/ArticleTemplate"
+import { PostTemplate } from "../_components/PostTemplate"
 import wslColorProbs from "./wsl-color-probs.png"
 import wslTmux from "./wsl-tmux.png"
 
@@ -54,5 +54,5 @@ Here's my current setup:
 My assessment: heck yeah! I've been using this as my primary C/C++ dev environment for about two weeks now and it is lightyears beyond trying to hack everything together on Windows utilities & MinGW. It'll never be as smooth as a real Linux install, but it's more than good enough to do real work in. For as long as I'm stuck on Windows, I plan to keep exploring and expanding this.
 
 export default ({ children }) => (
-  <ArticleTemplate meta={meta}>{children}</ArticleTemplate>
+  <PostTemplate meta={meta}>{children}</PostTemplate>
 )
