chore: more simplification and standardization

--- a/.measurements.md
+++ b/.measurements.md
@@ -28,7 +28,7 @@ Route (pages)                                    Size     First Load JS
   - doc: 5.7kb
   - fetch: 6.6kb
   - font: 109kb
-- article (scala): **320kb**
+- post (scala): **320kb**
   - js: 128kb
   - css: 3.8kb
   - doc: 16.1kb
@@ -64,7 +64,7 @@ Route (pages)                                    Size     First Load JS
   - doc: 2.9kb
   - fetch: 5.6kb
   - font: 109kb
-- article (scala): **294kb** (-26kb)
+- post (scala): **294kb** (-26kb)
   - js: 103kb
   - css: 8.9kb
   - doc: 11.3kb
