chore: use th for table head cells, and tidy

--- a/.todo.md
+++ b/.todo.md
@@ -22,7 +22,6 @@
 - [ ] fix navbar appearance & alignment in mobile menu
 - [ ] colors fade from light to dark on first page load. that should be fixed. probably this requires moving to global theming so I can style `html` and `body`
 - [ ] image optimization for static exports?
-- [ ] should TableHeadCell use <th>?
 - [ ] update PWA library
 - [ ] consistent footer spacing- `40px` maybe?
 - [ ] obliterate `pageStyles` directory
@@ -36,3 +35,4 @@
 - [ ] generate robots.txt, sitemap.xml, etc.
 - [ ] get article publish date working again in meta tags
 - [ ] make a better README
+- [ ] call the MDX files `post` instead of `page`
