--- a/.todo.md
+++ b/.todo.md
@@ -6,16 +6,15 @@
 - [ ] Line numbers in code blocks
 - [ ] Code block highlights
 - [ ] Code block styles for CLI
-- [ ] Actually display/use the category tags
+- [ ] tags index page & tag pages, someday
 - [ ] Get "Next Post" working for real
-- [ ] Type post meta, if possible. or swap to using frontmatter!
+- [ ] Type post meta, if possible. or swap to using frontmatter! and at least document the metadata schema
 - [ ] Yarn PnP support? (Not compatible with Turborepo... yet!)
 - [ ] Monorepo it? (Turborepo? NX?)
 - [ ] Storybook & design system
 - [ ] Fix janky width changing when scrollbar shows or hides, again. now it's on smaller screens?
 - [ ] more accessible focus states
 - [ ] change "More articles from vivshaw's" to something that reads better
-- [ ] should I use an actual list for the blog list? not sure!
 - [ ] stop using global transition variables, and standardize transitions more generally
 - [ ] sans is only used in tables, should I drop it?
 - [ ] heading styles in MDX get broken alignment on small screens
@@ -33,5 +32,4 @@
 - [ ] restyle so all pages can share `.centeringWrapper` etc.
 - [ ] get structured schema.org metadata working again
 - [ ] generate robots.txt, sitemap.xml, etc.
-- [ ] get article publish date working again in meta tags
 - [ ] make a better README
