feat: get schema.org structured metadata working again

--- a/.todo.md
+++ b/.todo.md
@@ -30,6 +30,8 @@
 - [ ] set up Google verification, etc
 - [ ] better branded theme color
 - [ ] restyle so all pages can share `.centeringWrapper` etc.
-- [ ] get structured schema.org metadata working again
 - [ ] generate robots.txt, sitemap.xml, etc.
 - [ ] make a better README
+- [ ] contact page?
+- [ ] get rid of ugly typecasts and disorganized logic in the metadata helpers
+- [ ] metadata q's- should I use Author instead of Person? Should I use Person on about page? add date updated to schema? use categories there too? etc.
