--- a/posts/robot-brain-scala/post.mdx
+++ b/posts/robot-brain-scala/post.mdx
@@ -243,8 +243,8 @@ All that's left is to fire it up and see what happens.
 
 Let's take it for a spin:
 
-```
-$sbt run
+```bash[class="command-line"][data-output="2-10"]
+sbt run
 now training
 Epoch 1 complete, with 8819 / 10000 correct
 Epoch 2 complete, with 9065 / 10000 correct
