--- a/posts/electric-pentameter/post.mdx
+++ b/posts/electric-pentameter/post.mdx
@@ -41,7 +41,7 @@ print("Our corpus contains {0} unique characters.".format(num_chars))
 
 My result:
 
-```
+```bash[class="command-line"][data-output="1-2"]
 Loaded a corpus of 94654 characters.
 Our corpus contains 64 unique characters.
 ```
@@ -70,7 +70,7 @@ print("Sliced our corpus into {0} sentences of length {1}".format(num_sentences,
 
 You should see something like this:
 
-```
+```bash[class="command-line"][data-output="1"]
 Sliced our corpus into 94604 sentences of length 50
 ```
 
@@ -80,7 +80,7 @@ For our labels, we have one label for each sentence, each of which should become
 
 ⚠️ We should make sure to sanity check our matrix dimensions before going any further! It will save you a lot of unnecessary headaches.
 
-```python
+```py
 # Vectorize our data and labels. We want everything in one-hot
 # because smart data encoding cultivates phronesis and virtue.
 print("Vectorizing X and y...")
@@ -96,7 +96,7 @@ print("Sanity check y. Dimension: {0} # Sentences: {1} Characters in corpus: {2}
 print("Sanity check X. Dimension: {0} Sentence length: {1}".format(X.shape, sentence_length))
 ```
 
-```
+```bash[class="command-line"][data-output="1-3"]
 Vectorizing X and y...
 Sanity check y. Dimension: (94604, 64) # Sentences: 94604 Characters in corpus: 64
 Sanity check X. Dimension: (94604, 50, 64) Sentence length: 50
@@ -138,16 +138,11 @@ callbacks = [dump_weights]
 
 ## It's Go Time!
 
-Now we'll train our model. We just need to specify the number of epochs and the batch size, and to remember to pass in our callbacks:
+Now we'll train our model. We just need to specify the number of epochs and the batch size, and to remember to pass in our callback. If all went well, you should find yourself staring at something like this (and stare you indeed shall, as it will take a while to train):
 
-```python
+```py[class="command-line"][data-output="3-8"][data-prompt=">>>"][data-filter-continuation="(con)"]
 # Action time! [Insert guitar solo here]
-model.fit(X, y, nb_epoch=30, batch_size=128, callbacks=callbacks)
-```
-
-If all went well, you should find yourself staring at something like this (and stare you indeed shall, as it will take a while to train):
-
-```
+(con)model.fit(X, y, nb_epoch=30, batch_size=128, callbacks=callbacks)
 128/94604 [..............................] - ETA: 1778s - loss: 4.1734
 256/94604 [..............................] - ETA: 1265s - loss: 4.1566
 [...]
