feat: adopt CSS grid in blog post styles, allowing simplification and correction of MDX styles

--- a/posts/build-you-a-tweetbot/post.mdx
+++ b/posts/build-you-a-tweetbot/post.mdx
@@ -78,9 +78,7 @@ api.update_status("Hello, world! Just testing Python twitter automation with twe
 
 Head over to your bot's twitter, and you should see a tweet!
 
-<div className="Image__Small">
-  <Image src={tweepyExample} alt="Example bot tweet" />
-</div>
+<Image alt="Example bot tweet" className="Image__Small" src={tweepyExample} />
 
 If this worked out for you, you're all set to move on to our next challenge: procedural text generation.
 
