feat: move to using regular markdown frontmatter

--- a/posts/build-you-a-tweetbot/post.mdx
+++ b/posts/build-you-a-tweetbot/post.mdx
@@ -1,15 +1,16 @@
+---
+title: "Build You a Python TweetBot: Tweepy & Markovify"
+
+blurb: "Using Markov chains to construct a literature-penning Twitter bot"
+date: 2017-01-25
+next: ["electric-pentameter", "robot-brain-scala"]
+tags: ["python", "twitter", "Markov chains", "bots"]
+slug: "build-you-a-tweetbot"
+---
+
 import Image from "next/image"
 
 import tweepyExample from "./tweepy-example.png"
-
-export const meta = {
-  title: "Build You a Python TweetBot: Tweepy & Markovify",
-  blurb: "Using Markov chains to construct a literature-penning Twitter bot",
-  date: new Date("2017-01-25"),
-  next: ["electric-pentameter", "robot-brain-scala"],
-  tags: ["python", "twitter", "Markov chains", "bots"],
-  slug: "build-you-a-tweetbot",
-}
 
 Perhaps you've run across Twitter bots like [@thesefutures](http://motherboard.vice.com/read/twitter-bot-predicts-these-futures) or [@thinkpiecebot](https://twitter.com/thinkpiecebot) and wondered how to do that yourself. It's surprisingly simple and you should give it a try! For the less-technically-inclined, one can create a bot with minimal code using [a tool that will handle the heavy lifting for you](http://cheapbotsdonequick.com/). But if perchance you desire something more than that— you've come to the right place. Today we're going to get our hands dirty with Python and the Twitter API, and code our own Twitter bot from scratch. If this piques your curiosity, then I'd love to show you how simple it can really be, with a pinch of Python magic.
 
