--- a/posts/data-mashups/post.mdx
+++ b/posts/data-mashups/post.mdx
@@ -1,17 +1,11 @@
-export const meta = {
-  title: "Data Mashups: Remix Your Way To Interactive Visualizations",
-  blurb: "",
-  date: new Date("2017-05-05"),
-  slug: "data-mashups",
-  tags: [
-    "python",
-    "javascript",
-    "data",
-    "geo",
-    "visualization",
-    "econ",
-    "leaflet",
-  ],
-}
+---
+title: "Data Mashups: Remix Your Way To Interactive Visualizations"
+
+blurb: ""
+date: 2017-05-05
+slug: "data-mashups"
+tags:
+  ["python", "javascript", "data", "geo", "visualization", "econ", "leaflet"]
+---
 
 The delightful [Alison Cossette](https://twitter.com/alison_cossette) and I just co-presented a talk at [Burlington Data Science](https://www.meetup.com/Burlington-Data-Scientists/) on using public data for business purposes. (My first talk ever!) My half of the talk was about using Python, Javascript, & GIS systems to mash up public economic & geographic datasets to build interactive visualizations of trends in employment within the IT industry. [My slides & demo apps are up here](https://vivsha.ws/4-19-public-data-talk/).
