--- a/posts/linux-on-windows/post.mdx
+++ b/posts/linux-on-windows/post.mdx
@@ -1,16 +1,17 @@
+---
+title: "Linux on Windows!?"
+
+blurb: "Windows 10 finally finds its killer app: Linux"
+date: 2017-07-03
+next: ["robot-brain-scala"]
+slug: "linux-on-windows"
+tags: ["linux", "windows", "bash", "WSL", "X"]
+---
+
 import Image from "next/image"
 
 import wslColorProbs from "./wsl-color-probs.png"
 import wslTmux from "./wsl-tmux.png"
-
-export const meta = {
-  title: "Linux on Windows!?",
-  blurb: "Windows 10 finally finds its killer app: Linux",
-  date: new Date("2017-07-03"),
-  next: ["robot-brain-scala"],
-  slug: "linux-on-windows",
-  tags: ["linux", "windows", "bash", "WSL", "X"],
-}
 
 If you, like me, are one of those devs who prefer a Linux environment but are stuck on Windows because of reasons (in my case, accessibility software), if you're tired of struggling with Cygwin and MinGW, if you're put off by the hassle of running everything in VMs: do yourself a favor & try [Windows Subsystem for Linux](https://msdn.microsoft.com/en-us/commandline/wsl/about). It may sound like just another Cygwin-alike, but trust me, it is way better.
 
