--- a/posts/robot-brain-scala/post.mdx
+++ b/posts/robot-brain-scala/post.mdx
@@ -1,11 +1,12 @@
-export const meta = {
-  title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers",
-  blurb: "Exploring computer vision with a from-scratch neural net in Scala",
-  date: new Date("2017-02-04"),
-  next: ["electric-pentameter", "build-you-a-tweetbot"],
-  slug: "robot-brain-scala",
-  tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"],
-}
+---
+title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers"
+
+blurb: "Exploring computer vision with a from-scratch neural net in Scala"
+date: 2017-02-04
+next: ["electric-pentameter", "build-you-a-tweetbot"]
+slug: "robot-brain-scala"
+tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"]
+---
 
 ## Or, a Python Dev Hacks Together a Neural Network From Scratch in (Bad) Scala
 
