feat: standardize all font sizes onto one scale

--- a/packages/viriditas/theme/Typography.mdx
+++ b/packages/viriditas/theme/Typography.mdx
@@ -7,3 +7,21 @@ import { tokens } from "@vivshaw/viriditas"
 # Foo
 
 <div style={{ color: tokens.color.background }}>Hello</div>
+
+Odd styles:
+2rem (list item bullets)
+0.625rem (global reset)
+1.6rem (global reset)
+
+Let's try:
+12px
+14px
+16px
+18px
+20px
+24px
+30px
+36px
+48px
+60px
+72px
